welcome.lessons.welcome.methods.basics.MethodsDogHouse.scala.code
var i=0;
var j=0;

	leveBrosse();
	setCouleurBrosse(Color.red);
	for(j<-4){
		avance(); avance(); gauche();
	
	}
	
	
	
	
	
	
	
	
	
	
	